# rustpress-plugin-rustmail

./: Cargo.toml  README.md
.github/workflows/: release.yml
migrations/: 001_create_tables.sql
src/: lib.rs  plugin.rs
src/handlers/: email.rs  log.rs  mod.rs  queue.rs  template.rs
src/models/: email.rs  log.rs  mod.rs  queue.rs  template.rs
src/services/: log.rs  mailer.rs  mod.rs  queue.rs  smtp.rs  template.rs
