[package]
name = "rustmail"
version = "0.1.0"
edition = "2021"
authors = ["RustPress Team"]
description = "Email management plugin for RustPress CMS"
license = "MIT"
repository = "https://github.com/rustpress/rustmail"
keywords = ["rustpress", "cms", "email", "smtp", "templates"]
categories = ["email", "web-programming"]

[lib]
name = "rustmail"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Async traits
async-trait = "0.1"

# Email sending
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder", "hostname"] }

# Template rendering
handlebars = "5.1"
tera = "1.19"

# HTML processing
scraper = "0.20"
ammonia = "4.0"

# Markdown support
pulldown-cmark = "0.11"

# Regex for template variables
regex = "1.10"

# Base64 for attachments
base64 = "0.22"

# MIME types
mime = "0.3"
mime_guess = "2.0"

# URL handling
url = "2.5"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["smtp"]
smtp = []
ses = []
sendgrid = []
mailgun = []
